# NightShift

./: .gitignore  .nightshift.yaml  IMPROVEMENTS.md  LICENSE  MVP.md  README.md  pyproject.toml  task_parser.py  tasks.yaml  test_task_parser.py
src/nightshift/: __init__.py  __main__.py  logging.py
src/nightshift/cli/: __init__.py  app.py  doctor_cmd.py  init_cmd.py  install_cmd.py  log_cmd.py  run_cmd.py  status_cmd.py  sync_cmd.py  tasks_cmd.py
src/nightshift/config/: loader.py  secrets.py
src/nightshift/executor/: __init__.py  claude.py  git_ops.py  quality_gates.py  runner.py
src/nightshift/models/: __init__.py  config.py  run.py  task.py
src/nightshift/reporting/: digest.py
src/nightshift/sources/: __init__.py  base.py  github_reviews.py  github_source.py  trello_source.py  yaml_source.py  youtrack_source.py
src/nightshift/storage/: store.py  task_queue.py
src/nightshift/tui/: __init__.py  app.py  app.tcss  constants.py  task_templates.py
src/nightshift/tui/widgets/: context_footer.py  header_bar.py  project_list.py  (+4 more)
tests/: conftest.py
tests/test_cli/: test_sync_cmd.py  test_tasks_cmd.py
tests/test_config/: test_loader.py  test_secrets.py
tests/test_executor/: test_claude.py  test_git_ops.py  test_quality_gates.py  test_runner.py
tests/test_models/: test_config.py  test_run.py  test_task.py
tests/test_sources/: test_github_reviews.py  test_registry.py  test_yaml_source.py
tests/test_storage/: test_store.py  test_task_queue.py
tests/test_tui/: test_add_builtin_task.py  test_constants.py  test_task_templates.py  test_widgets.py
